--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     color: white;
     background-color: #333;
     font-size: 150%;
-    font-family: 'Satisfy', cursive;
+    font-family: 'Sacramento', cursive;
     margin: 5em 25%;
+    
 }
