--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {
     color: white;
-    background-color: #333;
+    background-color: black;
     font-size: 150%;
-    font-family: 'Sacramento', cursive;
+    font-family: 'Satisfy', cursive;
     margin: 5em 25%;
     
 }
