--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     color: white;
     background-color: black;
     font-size: 150%;
-    font-family: 'Satisfy', cursive;
+    font-family: 'Sacramento', cursive;
     margin: 5em 25%;
     
 }
